# app.js
@@ -11,6 +11,7 @@ const eventsRouter = require('./routes/events');
 const bookingsRouter = require('./routes/bookings');
 const authRouter = require('./routes/auth');
 const authMiddleware = require('./middleware/auth.middleware');
+const errorHandler = require('./middleware/errorHandler');
 
 const swaggerDocument = require('./swagger/openapi.json');
 
@@ -29,8 +30,8 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use('/', indexRouter);
 app.use('/auth', authRouter);
 app.use('/users', authMiddleware, usersRouter);
-app.use('/events', authMiddleware, eventsRouter);
-app.use('/bookings', authMiddleware, bookingsRouter);
+app.use('/events', eventsRouter);
+app.use('/bookings', bookingsRouter);
 app.get('/swagger.json', (req, res) => res.json(swaggerDocument));
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -39,15 +40,6 @@ app.use((req, res, next) => {
     next(createError(404));
 });
 
-// error handler
-app.use((err, req, res, next) => {
-    // set locals, only providing error in development
-    res.locals.message = err.message;
-    res.locals.error = req.app.get('env') === 'development' ? err : {};
-
-    // render the error page
-    res.status(err.status || 500);
-    res.render('error');
-});
+app.use(errorHandler);
 
 module.exports = app;
